# pitcrew

./: .gitignore
DocSummarizer/: SKELETON_GUIDE.md
DocSummarizer/my_agent/: databricks.yml  pyproject.toml
Media_complience_agent/evaluation/: run_evaluation.py  scorers.py
Media_complience_agent/my_agent/: README.md  databricks.yml  pyproject.toml
Media_complience_agent/my_agent/agent_server/: agent.py  app.yaml  requirements.txt  start_server.py
Media_complience_agent/my_agent/agent_server/configs/: compliance.yaml
Media_complience_agent/my_agent/agent_server/configs/rules/: registry.yaml  severity_weights.yaml
Media_complience_agent/my_agent/agent_server/core/: config.py  graph.py  post_extractor.py  rule_registry.py  state.py  types.py
Media_complience_agent/my_agent/agent_server/core/nodes/: _shared.py  compliance_checker.py  guidance_generator.py  hitl_node.py  judge.py  output_formatter.py  risk_aggregator.py  rule_injector.py
Media_complience_agent/my_agent/agent_server/templates/prompts/: compliance_checker.j2  guidance_generator.j2  judge.j2  rule_parser.j2
Media_complience_agent/my_agent/agent_server/templates/schemas/: guidance.schema.json  judge_verdict.schema.json  parsed_rules.schema.json  violations.schema.json
Media_complience_agent/my_agent/agent_server/ui/: __init__.py
Media_complience_agent/my_agent/agent_server/ui/static/css/: styles.css
Media_complience_agent/my_agent/agent_server/ui/static/js/: app.js
Media_complience_agent/my_agent/agent_server/ui/templates/: index.html
Media_complience_agent/tests/: conftest.py
(+39 files in other folders)
